set(CURRENT_FOLDER "Tympan/Metier")

add_subdirectory(ToolsMetier)
add_subdirectory(CommonTools)
add_subdirectory(SolverDataModel)
add_subdirectory(DataManagerCore)
add_subdirectory(DataManagerMetier)
add_subdirectory(DataExchange)
add_subdirectory(AnalyticRayTracer)
add_subdirectory(AcousticRaytracer)
add_subdirectory(Solvers)

