set(MODULE_NAME tympan_qt_app)

file(GLOB ${MODULE_NAME}_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h)
# Some problematic / unused source files to be removed
# list(REMOVE_ITEM ${MODULE_NAME}_SRCS )

# Headers requiring MOC pre-processing...
file(GLOB ${MODULE_NAME}_MOC_HDRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h )
# ... all in this directory but for the one below
list(REMOVE_ITEM ${MODULE_NAME}_MOC_HDRS
    OSplashScreen.h
    TYAction.h
    TYActions.h
    TYAppDefines.h
    TYCustomPopupMenu.h
    TYDOMErrorHandler.h
    TYDXFBDTOPOImporter.h
    TYDXFImporter.h
    TYDXFBDTOPOSpecifications.h
    TYElementCheckListItem.h
    TYElementListItem.h
    TYMenuItem.h
    TYMessageManager.h
    TYOpenGLRenderer.h
    TYPHTympanApp.h
    TYVersion.h
)

# Needed to import DXF files.
add_definitions (-DTY_USE_DXF -DDIME_NOT_DLL) # XXX Add DIME_NOT_DLL too?? See
                                              # the define and the comment in
                                              # 'TYDXFImporter.h'.

# Call moc on the listed headers, thus generating new sources
qt4_wrap_cpp(${MODULE_NAME}_MOC_SRCS ${${MODULE_NAME}_MOC_HDRS})

#find_package(PythonLibs REQUIRED)
#include_directories(${PYTHON_INCLUDE_DIRS})

# Beware: those "modules" aka libraries must be given in reverse dependency order
# XXX Check whether tympan_acoustic_raytracer must be linked here or in solver modules
set(TYMPAN_MODULES  tympan_acoustic_raytracer tympan_dm_metier tympan_dm_graphics tympan_dm_ihm  tympan_dm_core
		    tympan_tools_metier tympan_tools_graphics
		    tympan_tools
)

set_precompiled_header(${MODULE_NAME} CXX
  ${CMAKE_CURRENT_SOURCE_DIR}/TYPHTympanApp.h ${MODULE_NAME}_PCH_SRCS)
add_executable(${MODULE_NAME}  ${${MODULE_NAME}_SRCS} ${${MODULE_NAME}_PCH_SRCS}
                               ${${MODULE_NAME}_MOC_SRCS} )    #Sources generated by MOC
set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER ${CURRENT_FOLDER})
use_precompiled_header(${MODULE_NAME} ${MODULE_NAME}_SRCS)

if(LOGILAB_USE_PRECOMPILED_HEADER)
add_dependencies(${MODULE_NAME}_pch Yams)
endif(LOGILAB_USE_PRECOMPILED_HEADER)
add_dependencies(${MODULE_NAME} ${TYMPAN_MODULES})
add_dependencies(${MODULE_NAME} Dime)

# Set the actual executble name to 'Tympan' or Tympand for debug version
set_property(TARGET ${MODULE_NAME} PROPERTY OUTPUT_NAME Tympan)
set_property(TARGET ${MODULE_NAME} PROPERTY DEBUG_POSTFIX "_d")
set(ADDITIONNAL_LIBRARIES "dime")

if (WIN32)
        LIST(APPEND ADDITIONNAL_LIBRARIES winmm.lib)
else ()

endif ()


link_directories(${CGAL_LIBRARIES_DIR})
target_link_libraries(${MODULE_NAME} ${QT_LIBRARIES} ${TYMPAN_MODULES}
                               ${OPENGL_LIBRARIES} ) # ${PYTHON_LIBRARIES}

foreach(lib ${ADDITIONNAL_LIBRARIES})
   target_link_libraries(${MODULE_NAME} ${lib})
endforeach()

install(TARGETS ${MODULE_NAME}
        DESTINATION . )

