TYMPAN_DOC_IMAGES = \
		    about.png \
		    biblio.png \
		    etageEditorDlgBox.png \
		    img0.png \
		    img1.png \
		    menuAide.png \
		    menuEdition.png \
		    menuFenetres.png \
		    menuFichier.png \
		    menuOutils.png \
		    menus.png \
		    modeleur.png \
		    modeleurBatiment.png \
		    modeleurFace.png \
		    modeleurMachine.png \
		    modeleurSite.png \
		    modeleurSiteT.png \
		    modeleurT.png \
		    popupModeleur.png \
		    pref3D.png \
		    prefAcoustique.png \
		    prefCouleurs.png \
		    prefGeneral.png \
		    prefGeometrie.png \
		    PrefImportDXF.png \
		    repere.png \
		    toolbarBatiment.png \
		    toolbarBatimentT.png \
		    toolbarCalcul.png \
		    toolbarFace.png \
		    toolbarFaceT.png \
		    toolbarFenetre.png \
		    toolbarFenetreT.png \
		    toolbarFichier.png \
		    toolbarFichierT.png \
		    toolbarInfra.png \
		    toolbarInfraT.png \
		    toolbarMachine.png \
		    toolbarMachineT.png \
		    toolbarMaillage.png \
		    toolbarMaillageT.png \
		    toolbarModeler.png \
		    toolbarModelerT.png \
		    toolbarTopo.png \
		    toolbarTopoT.png \
		    viewMessage.png \
		    viewProjet.png \
		    viewSite.png \
		    widgetCalcul.png \
		    workspace.png

docimagesdir=$(datadir)/tympan/doc/images
docimages_DATA=$(TYMPAN_DOC_IMAGES)
